--- a/monitor/templates/graph.html
+++ b/monitor/templates/graph.html
@@ -6,13 +6,13 @@
 <head>
     <meta charset="utf-8">
     <title>Plant stats</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'monitor/vendor/Chart.min.css' %}">
 </head>
 
 <body>
     <canvas id="myChart" width="800" height="480"></canvas>
-    <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js'></script>
+    <script src="{% static 'monitor/vendor/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'monitor/vendor/Chart.min.js' %}"></script>
     <script src="{% static 'monitor/js/plantChart.js' %}"></script>
 </body>
 
